--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-split-it": "^2.0.0",
     "sirv": "^2.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
-    "vite": "^4.4.9",
-    "vike": "^0.4.146"
+    "vike": "^0.4.146",
+    "vite": "^4.4.9"
   },
   "type": "module"
 }
