--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "types": ["vite/client"],
     "jsx": "react-jsx",
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "outDir": "dist",
   },
   "ts-node": {
     "transpileOnly": true,
