--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,11 @@
     // Doesn't apply to server/, see ts-node config down below and server/tsconfig.json
     "moduleResolution": "Bundler",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "types": ["vite/client"],
+    "types": ["vite/client", "googlemaps"],
     "jsx": "react-jsx",
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "outDir": "dist",
+    "outDir": "dist"
   },
   "ts-node": {
     "transpileOnly": true,
