--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@mui/material": "^5.14.18",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.10",
@@ -26,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "express": "^4.18.2",
     "react": "^18.2.0",
+    "react-chat-elements": "^12.0.11",
     "react-dom": "^18.2.0",
     "react-split-it": "^2.0.0",
     "sirv": "^2.0.3",
