--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "@vitejs/plugin-react": "^4.0.4",
+    "axios": "^1.6.2",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "eslint": "^8.47.0",
